# Landing-Page

./: .dockerignore  .gitignore  Dockerfile  Procfile  README.md  app.py  pyproject.toml  requirements.txt
scripts/: convert_images_to_webp.py
static/: lyrics.json
static/css/: game.css  style.css  terminal.css
static/data/: image_cache.json  lyrics.json  projects.json  visitors.sqlite3
static/js/: baltimore.js  collage.js  effects.js  lyrics-footer.js  project-detail.js  project.js  site.js  terminal-dino.js  terminal-doom.js  terminal-snake.js  terminal.js  visitors-map.js
static/js/game/: controls.js  levels.js  main.js  obstacles.js  physics.js  player.js  stations.js  ui.js
templates/: 404.html  about.html  all_lyrics.html  base.html  game.html  index.html  visitors.html
templates/blog/: index.html  post.html
templates/lyrics/: all.html
templates/projects/: academic.html  detail.html  personal.html
