[project]
name = "landing-page"
version = "0.1.0"
description = "Personal Flask portfolio site for Hunter Baisden."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask==2.2.2",
    "gunicorn==20.1.0",
    "pillow==12.1.0",
    "python-dotenv==1.2.1",
    "werkzeug==2.2.2",
]

[tool.uv]
package = false
